--- a/model.ipynb
+++ b/model.ipynb
@@ -534,7 +534,7 @@
     "            'neg' : -scores[0],\n",
     "            'neu' : scores[1],\n",
     "            'pos' : scores[2],\n",
-    "            'compound' : normalize(float(sum([scores[0], scores[2]])))\n",
+    "            'compound' : normalize([scores[0], scores[2]])))\n",
     "        }\n",
     "        return scores_dict"
    ]
@@ -605,7 +605,7 @@
     "neu_score_series = []\n",
     "neg_score_series = []\n",
     "comp_score_series = []\n",
-    "overall_sentiment_eval_series = []\n",
+    "\n",
     "model_used = []\n",
     "next_sent_dict = None\n",
     "next_pos_value = None\n",
@@ -627,11 +627,11 @@
     "        next_pos_value = next_sent_dict[\"pos\"]\n",
     "        next_neu_value = next_sent_dict[\"neu\"]\n",
     "        next_neg_value = next_sent_dict[\"neg\"]\n",
-    "        next_comp_value = next_sent_dict[\"compound\"]\n",
+    "        #next_comp_value = next_sent_dict[\"compound\"]\n",
     "        pos_score_series.append(next_pos_value)\n",
     "        neu_score_series.append(next_neu_value)\n",
     "        neg_score_series.append(next_neg_value)\n",
-    "        comp_score_series.append(next_comp_value)\n",
+    "        #comp_score_series.append(next_comp_value)\n",
     "        \n",
     "#except RuntimeError:\n",
     "        #print(i + \"/n\")\n",
@@ -658,19 +658,20 @@
     }
    ],
    "source": [
-    "for j in comp_score_series:\n",
-    "        if(j < -0.1):\n",
-    "                overall_sentiment_eval_series.append(\"Negative\")\n",
-    "        elif(j > 0.1):\n",
-    "                overall_sentiment_eval_series.append(\"Positive\")\n",
-    "        else:\n",
-    "                overall_sentiment_eval_series.append(\"Neutral\")\n",
+    "overall_sentiment_eval_series = []\n",
+    "#for j in comp_score_series:\n",
+    "        #if(j < -0.1):\n",
+    "                #overall_sentiment_eval_series.append(\"Negative\")\n",
+    "        #elif(j > 0.1):\n",
+    "                #overall_sentiment_eval_series.append(\"Positive\")\n",
+    "        #else:\n",
+    "                #overall_sentiment_eval_series.append(\"Neutral\")\n",
     "\n",
     "\n",
     "pos_score_series = pd.Series(pos_score_series)\n",
     "neu_score_series = pd.Series(neu_score_series)\n",
     "neg_score_series = pd.Series(neg_score_series)\n",
-    "comp_score_series = pd.Series(comp_score_series)\n",
+    "#comp_score_series = pd.Series(comp_score_series)\n",
     "overall_sentiment_eval_series = pd.Series(overall_sentiment_eval_series)\n",
     "print(\"list initialization complete!\")"
    ]
@@ -895,7 +896,6 @@
     "                       \"Positive Scores\": pos_score_series,\n",
     "                       \"Neutral Scores\": neu_score_series,\n",
     "                       \"Negative Scores\": neg_score_series,\n",
-    "                       \"Composite Scores\": comp_score_series,\n",
     "                       \"Overall Evaluation\": overall_sentiment_eval_series\n",
     "                       }\n",
     "reddit_sentiment_dataframe = pd.DataFrame(sentiment_text_dict)\n",
