--- a/model.ipynb
+++ b/model.ipynb
@@ -541,24 +541,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'neg': -0.4029202,\n",
-       " 'neu': 0.45570704,\n",
-       " 'pos': 0.14137273,\n",
-       " 'compound': 0.13916823662679345}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (161381380.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    if(which_model.lower() != \"roberta\" or which_model.lower() != \"vader\"):\u001b[0m\n\u001b[1;37m                                                                           ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "which_model = \"\"\n",
+    "while which_model == \"\":\n",
+    "    which_model = input(\"Roberta or Vader?\")\n",
+    "    if(which_model.lower() != \"roberta\" or which_model.lower() != \"vader\"):\n",
+    "        print(\"Not a valid answer \\n\")\n",
+    "        which_model = ''\n",
+    "        \n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "code",
@@ -666,7 +670,17 @@
     "                #overall_sentiment_eval_series.append(\"Positive\")\n",
     "        #else:\n",
     "                #overall_sentiment_eval_series.append(\"Neutral\")\n",
+    "for j in range(len(fixed_roberta_partial)):\n",
+    "    if(model_used[j] == \"Roberta\")\n",
+    "    weird = pos_score_series[j] + neg_score_series[j]\n",
+    "   \n",
+    "    if(weird > 0.1):\n",
+    "        overall_sentiment_eval_series.append(\"Positive\")\n",
     "\n",
+    "    elif (weird < -0.1) :\n",
+    "        overall_sentiment_eval_series.append(\"Negative\")\n",
+    "    else:\n",
+    "        overall_sentiment_eval_series.append(\"Neutral\")\n",
     "\n",
     "pos_score_series = pd.Series(pos_score_series)\n",
     "neu_score_series = pd.Series(neu_score_series)\n",
@@ -896,7 +910,8 @@
     "                       \"Positive Scores\": pos_score_series,\n",
     "                       \"Neutral Scores\": neu_score_series,\n",
     "                       \"Negative Scores\": neg_score_series,\n",
-    "                       \"Overall Evaluation\": overall_sentiment_eval_series\n",
+    "                       \"Overall Evaluation\": overall_sentiment_eval_series,\n",
+    "                       \"Model Used\": model_used\n",
     "                       }\n",
     "reddit_sentiment_dataframe = pd.DataFrame(sentiment_text_dict)\n",
     "reddit_sentiment_dataframe = reddit_sentiment_dataframe.set_index(\"Reddit Comments\")\n",
