--- a/model.ipynb
+++ b/model.ipynb
@@ -672,7 +672,7 @@
     "                #overall_sentiment_eval_series.append(\"Neutral\")\n",
     "for j in range(len(fixed_roberta_partial)):\n",
     "    if(model_used[j] == \"Roberta\")\n",
-    "    weird = pos_score_series[j] + neg_score_series[j]\n",
+    "    weird = pos_score_series[j] - neg_score_series[j]\n",
     "   \n",
     "    if(weird > 0.1):\n",
     "        overall_sentiment_eval_series.append(\"Positive\")\n",
