--- a/model.ipynb
+++ b/model.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJupyter cannot be started. Error attempting to locate Jupyter: Running cells with '/Users/JeMappelleCHJ/Desktop/JeMappelleCHJ/SpringProject1/.venv/bin/python' requires the jupyter and notebook package.\n",
+      "\u001b[1;31mRun the following command to install 'jupyter and notebook' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'python -m pip install jupyter notebook -U\n",
+      "\u001b[1;31mor\n",
+      "\u001b[1;31mconda install jupyter notebook -U'\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/installJupyterForVSCode'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
     "from scipy.special import softmax\n",
@@ -927,7 +941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
